--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             ad.classList.add('ad');
             ad.style.zIndex = adCount++;
             localStorage.setItem('adCount', adCount);
-            // Assuming this is the Monetag ad script you have been provided
+            // Assuming this is the Monetag Onclick (Popunder) ad script you have been provided
             const adScript = document.createElement('script');
             adScript.src = 'https://monetag.com/your-ad-script-url.js';
             ad.appendChild(adScript);
