--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
             border: 1px solid #ddd;
             margin-bottom: 20px;
             position: relative;
-            overflow: hidden; /* Ensure ads are contained within the frame */
+        }
+        .ad-placeholder {
+            color: #aaa;
+            font-size: 1.5em;
         }
         .ad-container iframe {
             width: 100%;
@@ -45,10 +48,11 @@
 <body>
     <div class="balance">Balance: ₦<span id="balance">0</span></div>
     <div class="ad-container" id="ad-container">
-        <!-- Ad will be dynamically loaded here -->
+        <span class="ad-placeholder">Ad will be here</span>
     </div>
     <button class="reset-button" onclick="resetBalance()">Reset Balance</button>
 
+    <script async="async" data-cfasync="false" src="//thubanoa.com/1?z=7635241"></script>
     <script>
         // Initialize balance from localStorage
         let balance = localStorage.getItem('balance') ? parseInt(localStorage.getItem('balance')) : 0;
@@ -68,22 +72,14 @@
             document.getElementById('balance').innerText = balance;
         }
 
-        // Load Golden Tag script to display ads
-        (function(d, z, s) {
-            s = document.createElement('script');
-            s.async = true;
-            s.src = 'https://' + d + '/400/' + z;
-            (document.body || document.documentElement).appendChild(s);
-        })('fortorterrar.com', 7635295);
-        
-        // Listen for ad clicks
-        window.addEventListener('message', function(event) {
-            if (event.origin === 'https://fortorterrar.com') {
-                // Assuming the event.data contains the amount earned (e.g., 20 Naira)
-                let earnedAmount = parseInt(event.data);
-                addBalance(earnedAmount);
-            }
-        });
+        // Simulate ad loading and clicking
+        window.onload = function() {
+            let adContainer = document.getElementById('ad-container');
+            adContainer.innerHTML = '<iframe src="https://thubanoa.com/1?z=7635241"></iframe>';
+            adContainer.addEventListener('click', function() {
+                addBalance(20); // Add 20 Naira per ad click
+            });
+        };
     </script>
 </body>
 </html>
