--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ad Click Money Machine</title>
+    <title>Popunder Ad Integration</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -26,14 +26,8 @@
         }
     </style>
 
-    <!-- Include monetization script -->
-    <script>
-        (function(s,u,z,p){
-            s.src=u;
-            s.setAttribute('data-zone',z);
-            p.appendChild(s);
-        })(document.createElement('script'), 'https://zovidree.com/tag.min.js', 7635204, document.body || document.documentElement);
-    </script>
+    <!-- Include popunder script -->
+    <script src="https://uwoaptee.com/act/files/tag.min.js?z=7635350" data-cfasync="false" async></script>
 
     <script>
         // Wait for the DOM to fully load
@@ -71,12 +65,12 @@
 </head>
 <body>
     <div class="container">
-        <h1>Ad Click Money Machine</h1>
+        <h1>Popunder Ad Integration</h1>
         <p>Your current balance:</p>
         <div id="balance">0 Naira</div>
         <div id="adContainer">
-            <!-- This is where the ad will be displayed -->
-            <img src="placeholder-ad.jpg" alt="Advertisement">
+            <!-- This is where the popunder ad will trigger -->
+            <button id="triggerPopunder">Click to Trigger Popunder</button>
         </div>
     </div>
 </body>
