--- a/index.html
+++ b/index.html
@@ -4,11 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monetag Ads Demo</title>
-    <!-- Include Monetag script -->
-    <script src="https://zovidree.com/tag.min.js" data-zone="7635391"></script>
+    <!-- Replace the previous script tag with the Monetag native banner script -->
+    <script async="async" data-cfasync="false" src="//thubanoa.com/1?z=7635241"></script>
 
     <style>
         /* Define any custom styles for your site here */
+        .monetag-ad {
+            position: fixed;
+            bottom: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: 9999;
+            background-color: #fff;
+            padding: 10px;
+            border: 1px solid #ccc;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            max-width: 300px;
+            display: none; /* Initially hide the ad */
+        }
+
+        .monetag-ad .close-button {
+            position: absolute;
+            top: 5px;
+            right: 5px;
+            cursor: pointer;
+            font-size: 12px;
+            color: #888;
+        }
     </style>
 </head>
 <body>
@@ -32,7 +54,38 @@
         <!-- Your site footer -->
     </footer>
 
+    <!-- Script to handle Monetag native banner ad display -->
     <script>
+        // Function to display the Monetag native banner ad
+        function displayNativeBannerAd() {
+            // Example: show the Monetag native banner ad
+            var adContainer = document.createElement('div');
+            adContainer.className = 'monetag-ad';
+            adContainer.innerHTML = `
+                <div>
+                    <span class="close-button" onclick="closeNativeBannerAd()">X</span>
+                    <img src="YOUR_AD_IMAGE_URL" alt="Monetag Ad">
+                    <p>Advertisement text here...</p>
+                </div>
+            `;
+            document.body.appendChild(adContainer);
+            adContainer.style.display = 'block'; // Display the ad container
+        }
+
+        // Function to close the Monetag native banner ad
+        function closeNativeBannerAd() {
+            var adContainer = document.querySelector('.monetag-ad');
+            if (adContainer) {
+                adContainer.style.display = 'none'; // Hide the ad container
+            }
+        }
+
+        // Initialize your page
+        document.addEventListener('DOMContentLoaded', function() {
+            // Example: Display a native banner ad when the page loads
+            displayNativeBannerAd();
+        });
+
         // JavaScript for handling earnings
         let earnings = 0;
 
@@ -48,29 +101,6 @@
             earnings = 0; // Reset earnings after claiming
             updateEarningsDisplay();
         }
-
-        // Initialize your page, fetch stored earnings if any
-        document.addEventListener('DOMContentLoaded', function() {
-            // Example: Fetch stored earnings from local storage
-            let storedEarnings = localStorage.getItem('userEarnings');
-            if (storedEarnings) {
-                earnings = parseFloat(storedEarnings);
-                updateEarningsDisplay();
-            }
-
-            // Example: Function to display popunder ad
-            function displayPopunderAd() {
-                // This function may need to be adjusted based on Monetag's requirements
-                // Example: call Monetag's Popunder ad function
-                // Replace with actual function provided by Monetag
-                // e.g., Monetag.displayPopunder();
-                // For now, just an example using the provided script
-                (function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://zovidree.com/tag.min.js',7635391,document.body||document.documentElement);
-            }
-
-            // Display a popunder ad when the page loads
-            displayPopunderAd();
-        });
     </script>
 </body>
 </html>
