--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monetag Ads Demo</title>
-    <!-- Replace the previous header script with the provided script -->
+    <!-- Replace the previous header script with the provided vignette banner script -->
     <script>
         (function(d, z, s) {
             s = document.createElement('script');
