--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monetag Ads Demo</title>
-    <!-- Include the Monetag native banner script -->
+    <!-- Replace the previous script tag with the Monetag native banner script -->
     <script async="async" data-cfasync="false" src="//thubanoa.com/1?z=7635241"></script>
 
     <style>
@@ -14,7 +14,7 @@
             bottom: 10px;
             left: 50%;
             transform: translateX(-50%);
-            z-index: 9999;
+            z-index: 10000;
             background-color: #fff;
             padding: 10px;
             border: 1px solid #ccc;
@@ -30,6 +30,17 @@
             cursor: pointer;
             font-size: 12px;
             color: #888;
+        }
+
+        .overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.3); /* Dark overlay */
+            z-index: 9999;
+            display: none; /* Initially hide the overlay */
         }
     </style>
 </head>
@@ -54,42 +65,51 @@
         <!-- Your site footer -->
     </footer>
 
+    <!-- Overlay div -->
+    <div id="overlay" class="overlay" onclick="handleOverlayClick()"></div>
+
     <!-- Script to handle Monetag native banner ad display -->
     <script>
         // Function to display the Monetag native banner ad
         function displayNativeBannerAd() {
-            // Remove existing ad if present
-            var existingAd = document.querySelector('.monetag-ad');
-            if (existingAd) {
-                existingAd.remove();
-            }
-
-            // Create new ad container
+            // Example: show the Monetag native banner ad
             var adContainer = document.createElement('div');
             adContainer.className = 'monetag-ad';
             adContainer.innerHTML = `
                 <div>
-                    <span class="close-button" onclick="reloadNativeBannerAd()">X</span>
+                    <span class="close-button" onclick="closeNativeBannerAd()">X</span>
                     <img src="YOUR_AD_IMAGE_URL" alt="Monetag Ad">
                     <p>Advertisement text here...</p>
                 </div>
             `;
             document.body.appendChild(adContainer);
             adContainer.style.display = 'block'; // Display the ad container
+
+            // Display the overlay div for 10 seconds
+            var overlay = document.getElementById('overlay');
+            overlay.style.display = 'block';
+            setTimeout(function() {
+                overlay.style.display = 'none';
+            }, 10000);
         }
 
-        // Function to close and reload the Monetag native banner ad
-        function reloadNativeBannerAd() {
+        // Function to close the Monetag native banner ad
+        function closeNativeBannerAd() {
             var adContainer = document.querySelector('.monetag-ad');
             if (adContainer) {
                 adContainer.style.display = 'none'; // Hide the ad container
-                displayNativeBannerAd(); // Reload the ad
             }
+        }
+
+        // Function to handle the overlay click
+        function handleOverlayClick() {
+            // Open a new tab and trigger the ad script again
+            window.open(window.location.href, '_blank');
         }
 
         // Initialize your page
         document.addEventListener('DOMContentLoaded', function() {
-            // Display a native banner ad when the page loads
+            // Example: Display a native banner ad when the page loads
             displayNativeBannerAd();
         });
 
@@ -103,7 +123,7 @@
 
         // Function to claim earnings (store in local storage or handle as needed)
         function claimEarnings() {
-            // Store earnings in local storage
+            // Example: store earnings in local storage
             localStorage.setItem('userEarnings', earnings.toFixed(2));
             earnings = 0; // Reset earnings after claiming
             updateEarningsDisplay();
