--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monetag Ads Demo</title>
-    <!-- Replace the previous script tag with the Monetag native banner script -->
-    <script async="async" data-cfasync="false" src="//thubanoa.com/1?z=7635241"></script>
+    <!-- Multitag script -->
+    <script src="https://alwingulla.com/88/tag.min.js" data-zone="74202" async data-cfasync="false"></script>
 
     <style>
         /* Define any custom styles for your site here */
