--- a/index.html
+++ b/index.html
@@ -3,131 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monetag Ads Demo</title>
-    <!-- Multitag script -->
-    <script src="https://alwingulla.com/88/tag.min.js" data-zone="74202" async data-cfasync="false"></script>
-
+    <title>Ad Click Balance Tracker</title>
     <style>
-        /* Define any custom styles for your site here */
-        .monetag-ad {
-            position: fixed;
-            bottom: 10px;
-            left: 50%;
-            transform: translateX(-50%);
-            z-index: 10000;
-            background-color: #fff;
-            padding: 10px;
-            border: 1px solid #ccc;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-            max-width: 300px;
-            display: none; /* Initially hide the ad */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            background-color: #f0f0f0;
         }
-
-        .monetag-ad .close-button {
-            position: absolute;
-            top: 5px;
-            right: 5px;
-            cursor: pointer;
-            font-size: 12px;
-            color: #888;
+        .balance {
+            margin-bottom: 20px;
+            font-size: 24px;
         }
-
-        .overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
+        .ad-container {
             width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.3); /* Dark overlay */
-            z-index: 9999;
-            display: none; /* Initially hide the overlay */
+            max-width: 728px;
+            height: 90px;
+            border: 1px solid #ccc;
+            background-color: #fff;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
     </style>
 </head>
 <body>
-    <header>
-        <!-- Your site header -->
-    </header>
+    <div class="balance">Balance: $<span id="balance">0</span></div>
+    <div class="ad-container" id="ad-container">
+        <!-- Ad script will be injected here -->
+    </div>
 
-    <main>
-        <section id="adsSection">
-            <!-- Ads will be dynamically inserted here by Monetag -->
-        </section>
-
-        <section id="earningsSection">
-            <h2>Your Earnings</h2>
-            <p id="earningsAmount">0</p>
-            <button onclick="claimEarnings()">Claim Earnings</button>
-        </section>
-    </main>
-
-    <footer>
-        <!-- Your site footer -->
-    </footer>
-
-    <!-- Overlay div -->
-    <div id="overlay" class="overlay" onclick="handleOverlayClick()"></div>
-
-    <!-- Script to handle Monetag native banner ad display -->
     <script>
-        // Function to display the Monetag native banner ad
-        function displayNativeBannerAd() {
-            // Example: show the Monetag native banner ad
-            var adContainer = document.createElement('div');
-            adContainer.className = 'monetag-ad';
-            adContainer.innerHTML = `
-                <div>
-                    <span class="close-button" onclick="closeNativeBannerAd()">X</span>
-                    <img src="YOUR_AD_IMAGE_URL" alt="Monetag Ad">
-                    <p>Advertisement text here...</p>
-                </div>
-            `;
-            document.body.appendChild(adContainer);
-            adContainer.style.display = 'block'; // Display the ad container
+        // Initialize balance from local storage or set to 0
+        let balance = parseInt(localStorage.getItem('userBalance')) || 0;
+        document.getElementById('balance').innerText = balance;
 
-            // Display the overlay div for 10 seconds
-            var overlay = document.getElementById('overlay');
-            overlay.style.display = 'block';
-            setTimeout(function() {
-                overlay.style.display = 'none';
-            }, 10000);
+        // Function to update balance
+        function updateBalance() {
+            balance += 1;
+            localStorage.setItem('userBalance', balance);
+            document.getElementById('balance').innerText = balance;
         }
 
-        // Function to close the Monetag native banner ad
-        function closeNativeBannerAd() {
-            var adContainer = document.querySelector('.monetag-ad');
-            if (adContainer) {
-                adContainer.style.display = 'none'; // Hide the ad container
+        // Ad script
+        (function(d,z,s){
+            s.src='https://'+d+'/401/'+z;
+            s.onload = function() {
+                // Simulate ad click for demonstration purposes
+                // In reality, you would detect actual ad clicks
+                document.getElementById('ad-container').onclick = function() {
+                    updateBalance();
+                };
+            };
+            try {
+                (document.body || document.documentElement).appendChild(s);
+            } catch(e) {
+                console.error("Ad script failed to load", e);
             }
-        }
-
-        // Function to handle the overlay click
-        function handleOverlayClick() {
-            // Open a new tab and trigger the ad script again
-            window.open(window.location.href, '_blank');
-        }
-
-        // Initialize your page
-        document.addEventListener('DOMContentLoaded', function() {
-            // Example: Display a native banner ad when the page loads
-            displayNativeBannerAd();
-        });
-
-        // JavaScript for handling earnings
-        let earnings = 0;
-
-        // Function to update earnings display
-        function updateEarningsDisplay() {
-            document.getElementById('earningsAmount').textContent = earnings.toFixed(2);
-        }
-
-        // Function to claim earnings (store in local storage or handle as needed)
-        function claimEarnings() {
-            // Example: store earnings in local storage
-            localStorage.setItem('userEarnings', earnings.toFixed(2));
-            earnings = 0; // Reset earnings after claiming
-            updateEarningsDisplay();
-        }
+        })('gloaphoo.net', 7635455, document.createElement('script'));
     </script>
 </body>
 </html>
