--- a/index.html
+++ b/index.html
@@ -3,88 +3,142 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ad Click Balance Tracker</title>
+    <title>Monetag Ads Demo</title>
+    <!-- Multitag script -->
+    <script src="https://alwingulla.com/88/tag.min.js" data-zone="74202" async data-cfasync="false"></script>
+
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            background-color: #f0f0f0;
-        }
-        .balance {
-            margin-bottom: 20px;
-            font-size: 24px;
-        }
-        .ad-container {
-            width: 100%;
-            max-width: 728px;
-            height: 90px;
-            border: 1px solid #ccc;
+        /* Define any custom styles for your site here */
+        .monetag-ad {
+            position: fixed;
+            bottom: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: 10000;
             background-color: #fff;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            padding: 10px;
+            border: 1px solid #ccc;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            max-width: 300px;
+            display: none; /* Initially hide the ad */
+        }
+
+        .monetag-ad .close-button {
+            position: absolute;
+            top: 5px;
+            right: 5px;
+            cursor: pointer;
+            font-size: 12px;
+            color: #888;
+        }
+
+        .overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.3); /* Dark overlay */
+            z-index: 9999;
+            display: none; /* Initially hide the overlay */
         }
     </style>
 </head>
 <body>
-    <div class="balance">Balance: $<span id="balance">0</span></div>
-    <div class="ad-container" id="ad-container">
-        <!-- Ad script will be injected here -->
-    </div>
+    <header>
+        <!-- Your site header -->
+    </header>
 
+    <main>
+        <section id="adsSection">
+            <!-- Ads will be dynamically inserted here by Monetag -->
+        </section>
+
+        <section id="earningsSection">
+            <h2>Your Earnings</h2>
+            <p id="earningsAmount">0</p>
+            <button onclick="claimEarnings()">Claim Earnings</button>
+            <button onclick="triggerDirectLink()">Click to Earn</button> <!-- Direct Link button -->
+        </section>
+    </main>
+
+    <footer>
+        <!-- Your site footer -->
+    </footer>
+
+    <!-- Overlay div -->
+    <div id="overlay" class="overlay" onclick="handleOverlayClick()"></div>
+
+    <!-- Script to handle Monetag native banner ad display -->
     <script>
-        // Initialize balance from local storage or set to 0
-        let balance = parseInt(localStorage.getItem('userBalance')) || 0;
-        document.getElementById('balance').innerText = balance;
+        // Function to display the Monetag native banner ad
+        function displayNativeBannerAd() {
+            // Example: show the Monetag native banner ad
+            var adContainer = document.createElement('div');
+            adContainer.className = 'monetag-ad';
+            adContainer.innerHTML = `
+                <div>
+                    <span class="close-button" onclick="closeNativeBannerAd()">X</span>
+                    <img src="YOUR_AD_IMAGE_URL" alt="Monetag Ad">
+                    <p>Advertisement text here...</p>
+                </div>
+            `;
+            document.body.appendChild(adContainer);
+            adContainer.style.display = 'block'; // Display the ad container
 
-        // Function to update balance
-        function updateBalance() {
-            balance += 1;
-            localStorage.setItem('userBalance', balance);
-            document.getElementById('balance').innerText = balance;
+            // Display the overlay div for 10 seconds
+            var overlay = document.getElementById('overlay');
+            overlay.style.display = 'block';
+            setTimeout(function() {
+                overlay.style.display = 'none';
+            }, 10000);
         }
 
-        // Function to load ad script randomly
-        function loadAdScript() {
-            const adContainer = document.getElementById('ad-container');
-            adContainer.innerHTML = ''; // Clear previous ad
-
-            const random = Math.random();
-            let script;
-
-            if (random < 0.5) {
-                script = document.createElement('script');
-                script.src = 'https://gloaphoo.net/401/7635455';
-                script.onload = function() {
-                    adContainer.onclick = function() {
-                        updateBalance();
-                    };
-                };
-            } else {
-                script = document.createElement('script');
-                script.src = 'https://alwingulla.com/88/tag.min.js';
-                script.setAttribute('data-zone', '74211');
-                script.async = true;
-                script.setAttribute('data-cfasync', 'false');
-                script.onload = function() {
-                    adContainer.onclick = function() {
-                        updateBalance();
-                    };
-                };
+        // Function to close the Monetag native banner ad
+        function closeNativeBannerAd() {
+            var adContainer = document.querySelector('.monetag-ad');
+            if (adContainer) {
+                adContainer.style.display = 'none'; // Hide the ad container
             }
-
-            adContainer.appendChild(script);
         }
 
-        // Load an ad script initially and then every 5 seconds
-        loadAdScript();
-        setInterval(loadAdScript, 5000);
+        // Function to handle the overlay click
+        function handleOverlayClick() {
+            // Open a new tab and trigger the ad script again
+            window.open(window.location.href, '_blank');
+        }
+
+        // Initialize your page
+        document.addEventListener('DOMContentLoaded', function() {
+            // Example: Display a native banner ad when the page loads
+            displayNativeBannerAd();
+        });
+
+        // JavaScript for handling earnings
+        let earnings = 0;
+
+        // Function to update earnings display
+        function updateEarningsDisplay() {
+            document.getElementById('earningsAmount').textContent = earnings.toFixed(2);
+        }
+
+        // Function to claim earnings (store in local storage or handle as needed)
+        function claimEarnings() {
+            // Example: store earnings in local storage
+            localStorage.setItem('userEarnings', earnings.toFixed(2));
+            earnings = 0; // Reset earnings after claiming
+            updateEarningsDisplay();
+        }
+
+        // Function to handle direct link clicks
+        function triggerDirectLink() {
+            // Open the direct link in a new tab
+            window.open('https://psaudous.com/4/7638410', '_blank');
+
+            // Add 4 naira to earnings
+            earnings += 4;
+            updateEarningsDisplay();
+        }
     </script>
 </body>
 </html>
